// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard clusters renders with clusters 1`] = `
<div
  className="row space-below"
>
  <div
    className="col"
  >
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        Largest clusters
        <button
          className="btn btn-outline-secondary fetch-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-rotate-right "
            data-icon="rotate-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={{}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M463.5 224H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1c-87.5 87.5-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5z"
              fill="currentColor"
              style={{}}
            />
          </svg>
        </button>
      </div>
      <div
        className="card-body text-center"
      >
        <div
          className="card-text"
        >
          <div
            className="row cluster-item"
          >
            <div
              className="col"
            >
              <p>
                <a
                  href="/clusters/test1"
                  onClick={[Function]}
                >
                  test1
                </a>
              </p>
              <small>
                Name
              </small>
            </div>
            <div
              className="col"
            >
              <p>
                0
              </p>
              <small>
                Shards
              </small>
            </div>
            <div
              className="col"
            >
              <p>
                1
              </p>
              <small>
                Nodes
              </small>
            </div>
            <div
              className="col"
            >
              <p>
                <span
                  className="db-icon mongodb"
                  title="MongoDB"
                />
              </p>
              <small>
                MongoDB
              </small>
            </div>
          </div>
          <div
            className="row cluster-item"
          >
            <div
              className="col"
            >
              <p>
                <a
                  href="/clusters/test2"
                  onClick={[Function]}
                >
                  test2
                </a>
              </p>
              <small>
                Name
              </small>
            </div>
            <div
              className="col"
            >
              <p>
                7
              </p>
              <small>
                Shards
              </small>
            </div>
            <div
              className="col"
            >
              <p>
                4
              </p>
              <small>
                Nodes
              </small>
            </div>
            <div
              className="col"
            >
              <p>
                <span
                  className="db-icon kafka"
                  title="Kafka"
                />
              </p>
              <small>
                Kafka
              </small>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard clusters renders with no clusters 1`] = `
<div
  className="row space-below"
>
  <div
    className="col"
  >
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        Largest clusters
        <button
          className="btn btn-outline-secondary fetch-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-rotate-right "
            data-icon="rotate-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={{}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M463.5 224H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1c-87.5 87.5-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5z"
              fill="currentColor"
              style={{}}
            />
          </svg>
        </button>
      </div>
      <div
        className="card-body text-center"
      >
        <p
          className="card-text large-icon"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chart-area "
            data-icon="chart-area"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={{}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zm96 288H448c17.7 0 32-14.3 32-32V251.8c0-7.6-2.7-15-7.7-20.8l-65.8-76.8c-12.1-14.2-33.7-15-46.9-1.8l-21 21c-10 10-26.4 9.2-35.4-1.6l-39.2-47c-12.6-15.1-35.7-15.4-48.7-.6L135.9 215c-5.1 5.8-7.9 13.3-7.9 21.1v84c0 17.7 14.3 32 32 32z"
              fill="currentColor"
              style={{}}
            />
          </svg>
        </p>
        <p
          className="card-text"
        >
          No data available
        </p>
      </div>
    </div>
  </div>
</div>
`;
